--- a/metro_uzbekistan.html
+++ b/metro_uzbekistan.html
@@ -2,11 +2,11 @@
 <html>
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-        <link rel="stylesheet" type="text/css" media="screen, projection" href="metro_milano.css" />
+        <link rel="stylesheet" type="text/css" media="screen, projection" href="metro_uzbekistan.css" />
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.bundle.min.js"></script>
-        <script type='text/javascript' src='metro_milano.js'></script>
+        <script type='text/javascript' src='metro_uzbekistan.js'></script>
         <script type='text/javascript' src='aEstrella.js'></script>
         <title>Metropolitana Di Milano</title>
     </head>
