estructura linea verde basica

--- a/metro_uzbekistan.html
+++ b/metro_uzbekistan.html
@@ -125,7 +125,23 @@
 
 
       <div id="map-container" class="col-8">
-        bbb
+        <ul class="m-4">
+            <li class="parada"></li>
+            <li class="camino"></li>
+            <li class="parada"></li>
+            <li class="camino"></li>
+            <li class="parada"></li>
+            <li class="camino"></li>
+            <li class="parada"></li>
+            <li class="camino"></li>
+            <li class="parada"></li>
+            <li class="camino"></li>
+            <li class="parada"></li>
+            <li class="camino"></li>
+            <li class="parada"></li>
+            <li class="camino"></li>
+            <li class="parada"></li>
+        </ul>
       </div>
 
 
