estructura linea verde basica

--- a/metro_uzbekistan.html
+++ b/metro_uzbekistan.html
@@ -123,28 +123,69 @@
 
       </div>
 
-
       <div id="map-container" class="col-8">
-        <ul class="m-4">
-            <li class="parada"></li>
-            <li class="camino"></li>
-            <li class="parada"></li>
-            <li class="camino"></li>
-            <li class="parada"></li>
-            <li class="camino"></li>
-            <li class="parada"></li>
-            <li class="camino"></li>
-            <li class="parada"></li>
-            <li class="camino"></li>
-            <li class="parada"></li>
-            <li class="camino"></li>
-            <li class="parada"></li>
-            <li class="camino"></li>
-            <li class="parada"></li>
-        </ul>
+          <div class="row" style="background-color: #999;">
+              <div class="col">
+                  <ul class="m-4">
+                      <li class="parada linea-r"></li>
+                      <li class="camino linea-r"></li>
+                      <li class="parada linea-r"></li>
+                      <li class="camino linea-r"></li>
+                      <li class="parada linea-r"></li>
+                      <li class="camino linea-r"></li>
+                      <li class="parada linea-r"></li>
+                      <li class="camino linea-r"></li>
+                      <li class="parada linea-r"></li>
+                      <li class="camino linea-r"></li>
+                      <li class="parada linea-r"></li>
+                      <li class="camino linea-r"></li>
+                      <li class="parada linea-r"></li>
+                      <li class="camino linea-r"></li>
+                      <li class="parada linea-r"></li>
+                  </ul>
+              </div>
+              <div class="col">
+                  <ul class="m-4 l-yun">
+                      <li class="parada linea-v"></li>
+                      <li class="camino linea-v"></li>
+                      <li class="parada linea-v"></li>
+                      <li class="camino linea-v"></li>
+                      <li class="parada linea-v"></li>
+                      <li class="camino linea-v"></li>
+                      <li class="parada linea-v"></li>
+                      <li class="camino linea-v"></li>
+                      <li class="parada linea-v"></li>
+                      <li class="camino linea-v"></li>
+                      <li class="parada linea-v"></li>
+                  </ul>
+              </div>
+              <div class="col">
+                  <ul class="m-4 l-uzb">
+                      <li class="parada linea-a"></li>
+                      <li class="camino linea-a"></li>
+                      <li class="parada linea-a"></li>
+                      <li class="camino linea-a"></li>
+                      <li class="parada linea-a"></li>
+                      <li class="camino linea-a"></li>
+                      <li class="parada linea-a"></li>
+                      <li class="camino linea-a"></li>
+                      <li class="parada linea-a"></li>
+                      <li class="camino linea-a"></li>
+                      <li class="parada linea-a"></li>
+                      <li class="camino linea-a to-uzb"></li>
+                      <li class="parada linea-a uzbekistan-desp"></li>
+                      <li class="camino linea-a to-pak"></li>
+                      <li class="parada linea-a pakhtakor-desp"></li>
+                      <li class="camino linea-a pakhtakor-desp"></li>
+                      <li class="parada linea-a pakhtakor-desp"></li>
+                      <li class="camino linea-a pakhtakor-desp"></li>
+                      <li class="parada linea-a pakhtakor-desp"></li>
+                      <li class="camino linea-a pakhtakor-desp"></li>
+                      <li class="parada linea-a pakhtakor-desp"></li>
+                  </ul>
+              </div>
+          </div>
       </div>
-
-
     </div>
     <div id="footer"></div>
 </body>
