estructura linea verde basica

--- a/metro_uzbekistan.html
+++ b/metro_uzbekistan.html
@@ -160,7 +160,7 @@
                   </ul>
               </div>
               <div class="col">
-                  <ul class="m-4 l-uzb">
+                  <ul class="m-4 ">
                       <li class="parada linea-a"></li>
                       <li class="camino linea-a"></li>
                       <li class="parada linea-a"></li>
@@ -176,12 +176,13 @@
                       <li class="parada linea-a uzbekistan-desp"></li>
                       <li class="camino linea-a to-pak"></li>
                       <li class="parada linea-a pakhtakor-desp"></li>
-                      <li class="camino linea-a pakhtakor-desp"></li>
-                      <li class="parada linea-a pakhtakor-desp"></li>
-                      <li class="camino linea-a pakhtakor-desp"></li>
-                      <li class="parada linea-a pakhtakor-desp"></li>
-                      <li class="camino linea-a pakhtakor-desp"></li>
-                      <li class="parada linea-a pakhtakor-desp"></li>
+                      <li class="camino linea-a to-gaf"></li>
+                      <li class="parada linea-a gafur-desp"></li>
+                      <li class="camino linea-a gafur-desp"></li>
+                      <li class="parada linea-a gafur-desp"></li>
+                      <li class="camino linea-a gafur-desp"></li>
+                      <li class="parada linea-a gafur-desp"></li>
+
                   </ul>
               </div>
           </div>
