estructura linea verde basica

--- a/metro_uzbekistan.html
+++ b/metro_uzbekistan.html
@@ -160,7 +160,7 @@
                   </ul>
               </div>
               <div class="col">
-                  <ul class="m-4 ">
+                  <ul class="m-4 l-uzb">
                       <li class="parada linea-a"></li>
                       <li class="camino linea-a"></li>
                       <li class="parada linea-a"></li>
