estructura linea verde basica

--- a/metro_uzbekistan.html
+++ b/metro_uzbekistan.html
@@ -182,6 +182,8 @@
                       <li class="parada linea-a gafur-desp"></li>
                       <li class="camino linea-a gafur-desp"></li>
                       <li class="parada linea-a gafur-desp"></li>
+                      <li class="camino linea-a gafur-desp"></li>
+                      <li class="parada linea-a gafur-desp"></li>
 
                   </ul>
               </div>
