estructura linea verde basica

--- a/metro_uzbekistan.html
+++ b/metro_uzbekistan.html
@@ -124,7 +124,7 @@
       </div>
 
       <div id="map-container" class="col-8">
-          <div class="row" style="background-color: #999;">
+          <div class="row mapa">
               <div class="col">
                   <ul class="m-4">
                       <li class="parada linea-r"></li>
@@ -178,12 +178,12 @@
                       <li class="parada linea-a pakhtakor-desp"></li>
                       <li class="camino linea-a to-gaf"></li>
                       <li class="parada linea-a gafur-desp"></li>
-                      <li class="camino linea-a gafur-desp"></li>
-                      <li class="parada linea-a gafur-desp"></li>
-                      <li class="camino linea-a gafur-desp"></li>
-                      <li class="parada linea-a gafur-desp"></li>
-                      <li class="camino linea-a gafur-desp"></li>
-                      <li class="parada linea-a gafur-desp"></li>
+                      <li class="camino linea-a to-cho"></li>
+                      <li class="parada linea-a chorsu-desp"></li>
+                      <li class="camino linea-a to-tin"></li>
+                      <li class="parada linea-a tin-desp"></li>
+                      <li class="camino linea-a to-ber"></li>
+                      <li class="parada linea-a beruni-desp"></li>
 
                   </ul>
               </div>
