--- a/metro_uzbekistan.html
+++ b/metro_uzbekistan.html
@@ -11,7 +11,7 @@
         <script type='text/javascript' src='metro_uzbekistan.js'></script>
         <script type='text/javascript' src='aEstrella.js'></script>
         <title>Tashkent Metro</title>
-    </head>
+      </head>
 
 
 <body>
@@ -125,66 +125,77 @@
 
       <div id="map-container" class="col-8">
           <div class="row mapa">
+              <!-- Linea roja -->
               <div class="col">
-                  <ul class="m-4">
-                      <li class="parada linea-r"></li>
+                  <ul class="m-4 l-chil">
+                      <li class="parada linea-r buyuk-desp"><span class="etiquetas">Buyuk</span></li> <!-- Buyuk Ipak Yuli -->
+                      <li class="camino linea-r to-push"></li>
+                      <li class="parada linea-r pushkin-desp"><span class="etiquetas">Pushkin</span></li> <!-- Pushkin -->
+                      <li class="camino linea-r to-khamid"></li>
+                      <li class="parada linea-r khamid-desp"><span class="etiquetas">Khamid</span></li> <!-- Khamid Alimjan -->
+                      <li class="camino linea-r to-amir1"></li>
+                      <li class="camino linea-r to-amir2"></li>
+                      <li class="parada linea-r"<span class="etiquetas">Amir</span></li> <!-- Amir Temur Hiyoboni -->
                       <li class="camino linea-r"></li>
-                      <li class="parada linea-r"></li>
+                      <li class="parada linea-r"><span class="etiquetas">Mustakillik</span></li> <!-- Mustakillik Maydoni -->
                       <li class="camino linea-r"></li>
-                      <li class="parada linea-r"></li>
-                      <li class="camino linea-r"></li>
-                      <li class="parada linea-r"></li>
-                      <li class="camino linea-r"></li>
-                      <li class="parada linea-r"></li>
-                      <li class="camino linea-r"></li>
-                      <li class="parada linea-r"></li>
-                      <li class="camino linea-r"></li>
-                      <li class="parada linea-r"></li>
-                      <li class="camino linea-r"></li>
-                      <li class="parada linea-r"></li>
+                      <li class="parada linea-r"><span class="etiquetas">Pakhtakor</span></li> <!-- Pakhtakor -->
+                      <li class="camino linea-r to-buny1"></li>
+                      <li class="camino linea-r to-buny2"></li>
+                      <li class="parada linea-r buny-desp"><span class="etiquetas">Bunyodkor</span></li> <!-- Bunyodkor -->
+                      <li class="camino linea-r to-milli"></li>
+                      <li class="parada linea-r milli-desp"><span class="etiquetas">Milliy Bog</span></li> <!-- Milliy Bog -->
+                      <li class="camino linea-r to-novza"></li>
+                      <li class="parada linea-r novza-desp"><span class="etiquetas">Novza</span></li>  <!-- Novza -->
+                      <li class="camino linea-r to-mirzo"></li>
+                      <li class="parada linea-r mirzo-desp"><span class="etiquetas">Mirzo</span></li> <!-- Mirzo Ulugbek -->
+                      <li class="camino linea-r to-chil"></li>
+                      <li class="parada linea-r chil-desp"><span class="etiquetas">Buyuk</span></li> <!-- Chilonzor -->
+                      <li class="camino linea-r to-olma"></li>
+                      <li class="parada linea-r olm-desp"><span class="etiquetas">Buyuk</span></li> <!-- Olmazor -->
                   </ul>
               </div>
+
+              <!-- Linea verde -->
               <div class="col">
                   <ul class="m-4 l-yun">
-                      <li class="parada linea-v"></li>
+                      <li class="parada linea-v"><span class="etiquetas-v">Shakhriston</span></li> <!-- Shakhriston -->
                       <li class="camino linea-v"></li>
-                      <li class="parada linea-v"></li>
+                      <li class="parada linea-v"></li> <!-- Bodomzor -->
                       <li class="camino linea-v"></li>
-                      <li class="parada linea-v"></li>
+                      <li class="parada linea-v"></li> <!-- Minor -->
                       <li class="camino linea-v"></li>
-                      <li class="parada linea-v"></li>
+                      <li class="parada linea-v"></li> <!-- Abdulla Kodiriy -->
                       <li class="camino linea-v"></li>
-                      <li class="parada linea-v"></li>
+                      <li class="parada linea-v"></li> <!-- Yunus Rajabiy -->
                       <li class="camino linea-v"></li>
-                      <li class="parada linea-v"></li>
+                      <li class="parada linea-v"></li> <!-- Ming Urik -->
                   </ul>
               </div>
+              <!-- Linea azul -->
               <div class="col">
                   <ul class="m-4 l-uzb">
-                      <li class="parada linea-a"></li>
-                      <li class="camino linea-a"></li>
-                      <li class="parada linea-a"></li>
-                      <li class="camino linea-a"></li>
-                      <li class="parada linea-a"></li>
-                      <li class="camino linea-a"></li>
-                      <li class="parada linea-a"></li>
-                      <li class="camino linea-a"></li>
-                      <li class="parada linea-a"></li>
-                      <li class="camino linea-a"></li>
-                      <li class="parada linea-a"></li>
-                      <li class="camino linea-a to-uzb"></li>
-                      <li class="parada linea-a uzbekistan-desp"></li>
-                      <li class="camino linea-a to-pak"></li>
-                      <li class="parada linea-a pakhtakor-desp"></li>
-                      <li class="camino linea-a to-gaf"></li>
-                      <li class="parada linea-a gafur-desp"></li>
-                      <li class="camino linea-a to-cho"></li>
-                      <li class="parada linea-a chorsu-desp"></li>
-                      <li class="camino linea-a to-tin"></li>
-                      <li class="parada linea-a tin-desp"></li>
-                      <li class="camino linea-a to-ber"></li>
-                      <li class="parada linea-a beruni-desp"></li>
-
+                    <li class="parada linea-a"></li> <!--Dostlik -->
+                    <li class="camino linea-a"></li>
+                    <li class="parada linea-a"></li> <!--Mashinasozlar -->
+                    <li class="camino linea-a"></li>
+                    <li class="parada linea-a"></li> <!--Toshkent -->
+                    <li class="camino linea-a"></li>
+                    <li class="parada linea-a"></li> <!--Kosmonavtlar -->
+                    <li class="camino linea-a"></li>
+                    <li class="parada linea-a"></li> <!--Uzbekistan -->
+                    <li class="camino linea-a to-uzb"></li>
+                    <li class="parada linea-a uzbekistan-desp"></li> <!--Alisher Navoi-->
+                    <li class="camino linea-a to-pak"></li>
+                    <li class="parada linea-a pakhtakor-desp"></li> <!--Gafur Gulom -->
+                    <li class="camino linea-a to-gaf"></li>
+                    <li class="parada linea-a gafur-desp"></li> <!--Chorsu -->
+                    <li class="camino linea-a to-cho"></li>
+                    <li class="parada linea-a chorsu-desp"></li> <!--Tinchlik -->
+                    <li class="camino linea-a to-tin"></li>
+                    <li class="parada linea-a tin-desp"></li>
+                    <li class="camino linea-a to-ber"></li>
+                    <li class="parada linea-a beruni-desp"></li> <!--Beruni -->
                   </ul>
               </div>
           </div>
